# api/openapi.yaml
@@ -20,6 +20,8 @@ security:
 tags:
 - description: not yet ready
   name: form
+- description: not yet ready
+  name: formB
 paths:
   /form:
     post:
@@ -128,10 +130,118 @@ paths:
       - form
       x-method-getAll: "true"
       x-eov-operation-handler: controllers/FormController
+  /formB:
+    post:
+      operationId: createformB
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/formB'
+        description: data to be created
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/formB'
+          description: successful operation
+      summary: Creates the data
+      tags:
+      - formB
+      x-eov-operation-handler: controllers/FormBController
+  /formB/{formBId}:
+    delete:
+      operationId: deleteformB
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: formBId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          description: successful operation
+      summary: Delete the element
+      tags:
+      - formB
+      x-eov-operation-handler: controllers/FormBController
+    get:
+      operationId: getformB
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: formBId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/formB'
+          description: successful operation
+      summary: Get the element
+      tags:
+      - formB
+      x-eov-operation-handler: controllers/FormBController
+    put:
+      operationId: updateformB
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: formBId
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/formB'
+        description: data to be updated
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/formB'
+          description: successful operation
+      summary: Updates the element
+      tags:
+      - formB
+      x-eov-operation-handler: controllers/FormBController
+  /formB/getAll:
+    get:
+      operationId: getAllformB
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/formB'
+                type: array
+          description: successful operation
+      summary: Get all the data
+      tags:
+      - formB
+      x-method-getAll: "true"
+      x-eov-operation-handler: controllers/FormBController
 components:
   schemas:
     form:
       example:
+        formEmailB: formEmailB
         formEmail: formEmail
         formName: formName
         _id: _id
@@ -142,7 +252,22 @@ components:
           type: string
         formEmail:
           type: string
+        formEmailB:
+          type: string
       required:
       - formEmail
+      - formEmailB
       - formName
+      type: object
+    formB:
+      example:
+        formNameB: formNameB
+        _id: _id
+      properties:
+        _id:
+          type: string
+        formNameB:
+          type: string
+      required:
+      - formNameB
       type: object
